--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Musiclist</title>
+  <title><%= yield(:title) || 'Musiclist' %></title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield(:head) %>
 </head>
 <body>
 
 <%= yield %>
 
+<%= jquery_cdn %>
+<%= javascript_include_tag "application" %>
 </body>
 </html>
