--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield(:title) || 'Musiclist' %></title>
+  <title><% if @content_for_title.blank? %>Musiclist<% else %><%= @content_for_title %><% end %></title>
   <%= stylesheet_link_tag    "application" %>
-  <%= csrf_meta_tags %>
   <%= yield(:head) %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
+<% if show_title? -%><h1><%= @content_for_title -%></h1><% end -%>
 <%= yield %>
 
 <%= jquery_cdn %>
 <%= javascript_include_tag "application" %>
+<%= yield(:scripts) %>
 </body>
 </html>
