--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -5,6 +5,10 @@
   <%= @artist.name %>
 </p>
 
+<h2>Albums</h2>
+<% @artist.albums.each do |album| %>
+<p><b><%= link_to album.title, album_path(album) %></b></p>
+<% end %>
 
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
 <%= link_to 'Back', artists_path %>
