--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<%- flash.each do |name, msg| -%><%= content_tag :div, msg, :id => "flash_#{name}" %><%- end -%>
+
 <% if show_title? -%><h1><%= @content_for_title -%></h1><% end -%>
 <%= yield %>
 
