Added display name for artists

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -20,6 +20,7 @@
     <tr>
       <td class="number"><%= a.order %></td>
       <td><%= a.album.title %></td>
+      <td><%= a.album.artist.display_name %></td>
     </tr>
 <% end %>
   </tbody>
