Changed RSImport to work with position

--- a/app/views/admin/rs_imports/_form.html.erb
+++ b/app/views/admin/rs_imports/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form.inputs do %>
     <%= form.input :album %>
     <%= form.input :artist %>
-    <%= form.input :order %>
+    <%= form.input :position %>
   <% end %>
   <%= form.buttons %>
 <% end %>
