Added mobile stylesheets to playlists

--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -14,3 +14,13 @@ td.number {
 thead .helper {
   font-weight: normal;
 }
+
+tbody a:hover {
+  background: transparent;
+}
+// a.label, a.label :visited {
+//  background-color: #BFBFBF;
+//}
+//a.label.success, a.label.warning, a.label.important, a.label.notice {
+//  color: white;
+//}
