--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><% if @content_for_title.blank? %>Musiclist<% else %><%= @content_for_title %><% end %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <%= stylesheet_link_tag 'http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css'%>
   <%= stylesheet_link_tag    "application" %>
   <%= yield(:head) %>
