--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -14,8 +14,14 @@
       <td class="number"><%= a.position %></td>
       <td><span class="artist"><%= a.album.artist.display_name %></span> - <%= a.album.title %></td>
       <td>
-        <a class="played"><span class="label">Played</span></a>
-        <a class="purchased"><span class="label">Purchased</span></a>
+		    <% album_status = @album_statuses.find_by_album_id(a.album_id) %>
+        <% if album_status.nil? %>
+          <a class="played"><span class="label">Played</span></a>
+          <a class="purchased"><span class="label">Purchased</span></a>
+        <% else %>
+          <a class="played"><span class="label<% if album_status.played? %> warning<% end %>">Played</span></a>
+          <a class="purchased"><span class="label<% if album_status.purchased? %> success <% end %>">Purchased</span></a>
+        <% end %>
       </td>
     </tr>
 <% end %>
@@ -62,7 +68,6 @@ $(function() {
       url: "<%= album_statuses_path(format: :js) %>"
     })
   });
-  $.getScript('<%= album_statuses_path() %>')
 });
 //-->
 </script>
