--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,23 +1,43 @@
-<h1>Listing artists</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @artists.each do |artist| %>
-  <tr>
-    <td><%= artist.name %></td>
-    <td><%= link_to 'Show', artist %></td>
-    <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
-    <td><%= link_to 'Destroy', artist, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<%- model_class = Artist -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th class="id-column">&nbsp;</th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @artists.each do |artist| %>
+      <tr class="artist_<%= artist.id %>">
+        <td class="id-column"><%= artist.id %></td>
+        <td class="title-column"><%= link_to artist.name, artist_path(artist) %></td>
+        <td><%=l artist.created_at, :format => :long %></td>
+        <td class="table-actions">
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_artist_path(artist),
+                      :class => 'btn btn-mini',
+                      :disabled => !can?(:update, artist)
+          %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      artist_path(artist),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger',
+                      :disabled => !can?(:destroy, artist)
+          %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Artist', new_artist_path %>
+<% if can?(:create, Artist) %>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_artist_path,
+            :class => 'btn btn-primary' %>
+<% end %>
