--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,30 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Artist -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @artist.name %>
-</p>
+<dl class="dl-horizontal item-summary">
+  <% unless @artist.name.blank? %>
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @artist.name %></dd>
+  <% end %>
+</dl>
 
-<h2>Albums</h2>
-<% @artist.albums.each do |album| %>
-<p><b><%= link_to album.title, album_path(album) %></b></p>
-<% end %>
-
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              artists_path, :class => 'btn'  %>
+  <% if can? :update, @artist %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_artist_path(@artist),
+              :class => 'btn'
+    %>
+  <% end %>
+  <% if can? :destroy, @artist %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              artist_path(@artist),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'act act-danger pull-right'
+    %>
+  <% end %>
+</div>
