--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,31 +1,49 @@
-<% title 'All Albums' -%>
-<%= meta_description 'A List of Albums that Ben wishes to own' %>
-<%= meta_keywords 'albums', 'CDs', 'wishlist' %>
-
-<table>
+<%- model_class = Album -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
-  <tr>
-    <th>Title</th>
-    <th>Artist</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+    <tr>
+      <th class="id-column">&nbsp;</th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <% unless @artist %>
+        <th><%= model_class.human_attribute_name(:artist) %></th>
+      <% end %>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
   </thead>
-
   <tbody>
-<% @albums.each do |album| %>
-  <tr>
-    <th><%= album.title %></th>
-    <td><%= album.artist.name %></td>
-    <td><%= link_to 'Show', album %></td>
-    <td><%= link_to 'Edit', edit_album_path(album) %></td>
-    <td><%= link_to 'Destroy', album, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+    <% @albums.each do |album| %>
+      <tr class="album_<%= album.id %>">
+        <td class="id-column"><%= album.id %></td>
+        <td class="title-column"><%= link_to album.title, album_path(album) %></td>
+        <% unless @artist %>
+          <td><%= album.artist %></td>
+        <% end %>
+        <td><%=l album.created_at, :format => :long %></td>
+        <td class="table-actions">
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_album_path(album),
+                      :class => 'btn btn-mini',
+                      :disabled => !can?(:update, album)
+          %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      album_path(album),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger',
+                      :disabled => !can?(:destroy, album)
+          %>
+        </td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Album', new_album_path %>
+<% if can?(:create, Album) %>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_album_path,
+            :class => 'btn btn-primary' %>
+<% end %>
