--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,14 +1,34 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Album -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Title:</b>
-  <%= @album.title %>
-</p>
+<dl class="dl-horizontal item-summary">
+  <% unless @album.title.blank? %>
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @album.title %></dd>
+  <% end %>
+  <% if @album.artist.present? && can?(:read, @album.artist) %>
+  <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
+  <dd><%= link_to @album.artist, artist_path(@album.artist) %></dd>
+  <% end %>
+</dl>
 
-<p>
-  <b>Artist:</b>
-  <%= link_to @album.artist.name, artist_path(@album.artist) %>
-</p>
-
-<%= link_to 'Edit', edit_album_path(@album) %> |
-<%= link_to 'Back', albums_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              albums_path, :class => 'btn'  %>
+  <% if can? :update, @album %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_album_path(@album),
+              :class => 'btn'
+    %>
+  <% end %>
+  <% if can? :destroy, @album %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              album_path(@album),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'act act-danger pull-right'
+    %>
+  <% end %>
+</div>
