--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,23 +1,45 @@
-<h1>Listing playlists</h1>
-
-<table class="condensed-table">
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @playlists.each do |playlist| %>
-  <tr>
-    <td><%= playlist.name %></td>
-    <td><%= link_to 'Show', playlist %></td>
-    <td><%= link_to 'Edit', edit_playlist_path(playlist) %></td>
-    <td><%= link_to 'Destroy', playlist, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<%- model_class = Playlist -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th class="id-column">&nbsp;</th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <% if can?(:update, Playlist) %>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% @playlists.each do |playlist| %>
+      <tr class="playlist_<%= playlist.id %>">
+        <td class="id-column"><%= playlist.id %></td>
+        <td class="title-column"><%= link_to playlist.name, playlist_path(playlist) %></td>
+        <% if can?(:update, Playlist) %>
+        <td class="table-actions">
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_playlist_path(playlist),
+                      :class => 'btn btn-mini',
+                      :disabled => !can?(:update, playlist)
+          %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      playlist_path(playlist),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger',
+                      :disabled => !can?(:destroy, playlist)
+          %>
+        </td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to "Create", new_playlist_path %>
+<% if can?(:create, Playlist) %>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_playlist_path,
+            :class => 'btn btn-primary' %>
+<% end %>
