--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -15,7 +15,7 @@
   <thead>
     <tr>
       <th>&nbsp;</th>
-      <th><span class="helper">Sort:</span> <%= link_to 'Position', url_for(:order => nil) %> | <%= link_to 'Artist', url_for(:order => 'artist') %> | <%= link_to 'Album', url_for(:order => 'album') %></th>
+      <th><span class="helper">Sort:</span> <%= link_to 'Position', playlist_path(@playlist, :order => nil) %> | <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist') %> | <%= link_to 'Album', playlist_path(@playlist, :order => 'album') %></th>
     </tr>
   </thead>
   <tbody>
@@ -24,14 +24,9 @@
       <td class="number"><%= a.position %></td>
       <td><span class="artist"><%= a.album.artist.display_name %></span> - <%= a.album.title %></td>
       <td>
-		    <% album_status = @album_statuses.find_by_album_id(a.album_id) %>
-        <% if album_status.nil? %>
-          <a class="played"><span class="label">Played</span></a>
-          <a class="purchased"><span class="label">Purchased</span></a>
-        <% else %>
-          <a class="played"><span class="label<% if album_status.played? %> warning<% end %>">Played</span></a>
-          <a class="purchased"><span class="label<% if album_status.purchased? %> success <% end %>">Purchased</span></a>
-        <% end %>
+        <% album_status = @album_statuses.find_by_album_id(a.album_id) %>
+        <a class="played"><span class="label<% if album_status.present? && album_status.played? %> warning<% end %>">Played</span></a>
+        <a class="purchased"><span class="label<% if album_status.present? && album_status.purchased? %> success <% end %>">Purchased</span></a>
       </td>
     </tr>
 <% end %>
