--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -11,7 +11,7 @@
 </dl>
 
 <% unless @playlist_albums.empty? %>
-<table class="condensed-table zebra-striped">
+<table class="table table-condensed table-striped">
   <thead>
     <tr>
       <th>&nbsp;</th>
@@ -25,8 +25,8 @@
       <td><span class="artist"><%= a.album.artist.display_name %></span> - <%= a.album.title %></td>
       <td>
         <% album_status = @album_statuses.find_by_album_id(a.album_id) %>
-        <a class="played"><span class="label<% if album_status.present? && album_status.played? %> warning<% end %>">Played</span></a>
-        <a class="purchased"><span class="label<% if album_status.present? && album_status.purchased? %> success <% end %>">Purchased</span></a>
+        <a class="played"><span class="label<% if album_status.present? && album_status.played? %> label-warning<% end %>">Played</span></a>
+        <a class="purchased"><span class="label<% if album_status.present? && album_status.purchased? %> label-success <% end %>">Purchased</span></a>
       </td>
     </tr>
 <% end %>
@@ -42,8 +42,8 @@
 //<!--
 $(function() {
   $('a.played').click(function() {
-    $(this).find('span.label').toggleClass('warning');
-    var played = $(this).find('span.label').hasClass('warning');
+    $(this).find('span.label').toggleClass('label-warning');
+    var played = $(this).find('span.label').hasClass('label-warning');
     var album_id = $(this).parent('td').parent('tr').attr('data-album');
     $.ajax({
       type: 'post',
@@ -58,8 +58,8 @@ $(function() {
     })
   });
   $('a.purchased').click(function() {
-    $(this).find('span.label').toggleClass('success');
-    var purchased = $(this).find('span.label').hasClass('success');
+    $(this).find('span.label').toggleClass('label-success');
+    var purchased = $(this).find('span.label').hasClass('label-success');
     var album_id = $(this).parent('td').parent('tr').attr('data-album');
     $.ajax({
       type: 'post',
