--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -70,7 +70,7 @@ $(function() {
         }
       },
       complete: function(request){},
-      url: "<%= album_statuses_path(format: :js) %>"
+      url: "<%= album_statuses_path(format: :json) %>"
     })
   });
 });
