--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -10,6 +10,42 @@
   <% end %>
 </dl>
 
+<h2>Albums</h2>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th class="id-column">&nbsp;</th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @artist.albums.each do |album| %>
+      <tr class="album_<%= album.id %>">
+        <td class="id-column"><%= album.id %></td>
+        <td class="title-column"><%= link_to album.title, album_path(album) %></td>
+        <td><%=l album.created_at, :format => :long %></td>
+        <td class="table-actions">
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_album_path(album),
+                      :class => 'btn btn-mini',
+                      :disabled => !can?(:update, album)
+          %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      album_path(album),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger',
+                      :disabled => !can?(:destroy, album)
+          %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               artists_path, :class => 'btn'  %>
