--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -22,7 +22,7 @@
 <% @playlist_albums.each do |a| %>
     <tr data-album="<%= a.id %>">
       <td class="number"><%= a.position %></td>
-      <td><span class="artist"><%= a.album.artist.display_name %></span> - <%= a.album.title %></td>
+      <td><span class="artist"><%= a.album.artist.name %></span> - <%= a.album.title %></td>
       <td>
         <% album_status = @album_statuses.find_by_album_id(a.album_id) %>
         <a class="played"><span class="label<% if album_status.present? && album_status.played? %> label-warning<% end %>">Played</span></a>
