--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -20,7 +20,12 @@
   <thead>
     <tr>
       <th>&nbsp;</th>
-      <th><span class="helper">Sort:</span> <%= link_to 'Position', playlist_path(@playlist, :order => nil) %> | <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist') %> | <%= link_to 'Album', playlist_path(@playlist, :order => 'album') %></th>
+      <th>
+        <span class="helper">Sort:</span>
+        <%= link_to 'Position', playlist_path(@playlist, :order => nil), class: 'order-position' %> |
+        <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist'), class: 'order-artist' %> |
+        <%= link_to 'Album', playlist_path(@playlist, :order => 'album'), class: 'order-album' %>
+      </th>
       <th class="actions">&nbsp;</th>
     </tr>
   </thead>
@@ -37,13 +42,10 @@
 <script type="text/javascript">
 //<!--
 $(function() {
-  // $('table.playlist-table').each(function() {
-  //   window.playlistTable = new MusicList.PlaylistTable( $(this) );
-  // });
   albums = new Musiclist.Models.Albums();
 
   playlistTable = new Musiclist.Views.PlaylistTable({
-    el: $('table.playlist-table tbody'),
+    el: $('table.playlist-table'),
     model: albums
   })
   playlistTable.render();
