--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -21,10 +21,24 @@
     <tr>
       <th>&nbsp;</th>
       <th>
-        <span class="helper">Sort:</span>
-        <%= link_to 'Position', playlist_path(@playlist, :order => nil), class: 'order-position' %> |
-        <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist'), class: 'order-artist' %> |
-        <%= link_to 'Album', playlist_path(@playlist, :order => 'album'), class: 'order-album' %>
+        <div class="playlist-sort">
+          <span class="helper">Sort:</span>
+          <%= link_to 'Position', playlist_path(@playlist, :order => nil), class: 'order-position' %> |
+          <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist'), class: 'order-artist' %> |
+          <%= link_to 'Album', playlist_path(@playlist, :order => 'album'), class: 'order-album' %>
+        </div>
+        <div class="playlist-filter">
+          <span class="helper">Filter:</span>
+          <label class="checkbox inline">
+            <input type="checkbox" id="album-played" value="1" checked="checked"> Played
+          </label>
+          <label class="checkbox inline">
+            <input type="checkbox" id="album-purchased" value="1" checked="checked"> Purshased
+          </label>
+          <label class="checkbox inline">
+            <input type="checkbox" id="album-unheard" value="1" checked="checked"> None
+          </label>
+        </div>
       </th>
       <th class="actions">&nbsp;</th>
     </tr>
