Table header spans 3 columns

--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -43,7 +43,7 @@ tbody a:hover {
 
 @media only screen and (min-width: 768px) {
 
-	th.actions {
+	th.actions, td.actions {
 		min-width: 120px;
 	}
 
