--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <%= yield %>
 </div>
 
-<%= jquery_cdn %>
+<%= jquery_include_tag :google %>
 <%= javascript_include_tag "application" %>
 <%= yield(:scripts) %>
 </body>
