--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -6,14 +6,27 @@
 <% end %>
 <%= content_tag :h2, @playlist.name %>
 
-<dl class="dl-horizontal">
-  <dt>Albums:</dt>
-  <dd><%= @playlist_albums.count %></dd>
-  <dt>Played:</dt>
-  <dd><%= AlbumStatus.played.count %></dd>
-  <dt>Purchased:</dt>
-  <dd><%= AlbumStatus.purchased.count %></dd>
-</dl>
+<div class="accordion" id="headerAccordion">
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#headerAccordion" href="#collapseStats">
+        Stats
+      </a>
+    </div>
+    <div id="collapseStats" class="accordion-body collapse">
+      <div class="accordion-inner">
+        <dl class="dl-horizontal">
+          <dt>Albums:</dt>
+          <dd><%= @playlist_albums.count %></dd>
+          <dt>Played:</dt>
+          <dd><%= AlbumStatus.played.count %></dd>
+          <dt>Purchased:</dt>
+          <dd><%= AlbumStatus.purchased.count %></dd>
+        </dl>
+      </div>
+    </div>
+  </div>
+</div>
 
 <% unless @playlist_albums.empty? %>
 <table class="table table-condensed table-striped playlist-table" data-album-statuses-path="<%= album_statuses_path(format: :json) %>">
