--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -4,6 +4,9 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.association :artist %>
+    <%= f.input :genre %>
+    <%= f.input :album_art %>
+    <%= f.input :year %>
   </div>
 
   <div class="form-actions">
