--- a/app/assets/javascripts/backbone/templates/playlists/album.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/playlists/album.jst.ejs
@@ -1,5 +1,9 @@
 <td class="number"><%= position %></td>
-<td><span class="artist"><%= artist %></span> - <%= title %></td>
+<td>
+  <span class="artist-name"><%= artist %></span> - <span class="album-title"><%= title %></span>
+  <% if (genre) { %><span class="album-genre"><%= genre %></span><% } %>
+  <% if (edit_link) { %><a href="<%= edit_link %>"><span class="icon-edit"></span></a><% } %>
+</td>
 <td>
   <a class="played"><span class="label<% if (played) { %> label-warning<% } %>">Played</span></a>
   <a class="purchased"><span class="label<% if (purchased) { %> label-success <% } %>">Purchased</span></a>
