--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,13 +3,15 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require formtastic
- *= require formtastic_changes
- *= require playlists
- *= require scaffolds
 */
 
 @import 'bootstrap';
+
+@import 'formtastic';
+@import 'formtastic_changes';
+
+@import 'playlists';
+@import 'scaffolds';
 
 #flash_notice, #flash_error {
   padding: 5px 8px;
