--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -2,9 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-tr span.artist {
+tr span.artist-name {
   font-weight: bold;
   font-weight: 600;
+}
+tr span.album-genre {
+  color: $grayLight;
+  font-size: smaller;
+  font-variant: small-caps;
 }
 
 td.number {
