--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -37,7 +37,8 @@
           <span class="helper">Sort:</span>
           <%= link_to 'Position', playlist_path(@playlist, :order => nil), class: 'order-position' %> |
           <%= link_to 'Artist', playlist_path(@playlist, :order => 'artist'), class: 'order-artist' %> |
-          <%= link_to 'Album', playlist_path(@playlist, :order => 'album'), class: 'order-album' %>
+          <%= link_to 'Album', playlist_path(@playlist, :order => 'album'), class: 'order-album' %> |
+          <%= link_to 'Genre', playlist_path(@playlist, :order => 'genre'), class: 'order-genre' %>
         </div>
         <div class="playlist-filter">
           <span class="helper">Filter:</span>
