Changed order of Artists in drop down lists

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.association :artist %>
+    <%= f.association :artist, :collection => @artists %>
     <%= f.input :genre %>
     <%= f.input :album_art %>
     <%= f.input :year %>
